fixed css preventing image from aligning right

--- a/static/css/hover.css
+++ b/static/css/hover.css
@@ -5,14 +5,15 @@
     position: relative;
     margin: 10px;
     color: #ffffff;
-    text-align: right;
+    display: inline-block;
     background-color: #000000;
-    width: 60%;
+    width: auto;
     font-size: 16px;
     border-radius: 48px;
 }
 
 .hoverText * {
+    text-align: left;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-transition: all 0.4s ease-in;
@@ -21,6 +22,7 @@
 
 .hoverText img {
     position: relative;
+    width: auto;
     max-width: 100%;
     vertical-align: top;
 }
@@ -34,9 +36,6 @@
     padding: 20px 30px;
 }
 
-
-
-.hoverText h3,
 
 .hoverText h3 {
     margin: 0 0 5px;
